# ml-code

./: LICENSE
projects/mininn/: README.md  check.sh  pyproject.toml
projects/mininn/notebooks/: mnist.ipynb
projects/mininn/src/mininn/: __init__.py  conv2d.py  cross_entropy_loss.py  dropout.py  flatten.py  function.py  linear.py  log_softmax.py  max_pool2d.py  module.py  mse_loss.py  nll_loss.py  optim.py  parameter.py  relu.py  sequential.py  softmax.py
projects/mininn/tests/: conv2d_test.py  cross_entropy_loss_test.py  dropout_test.py  flatten_test.py  linear_test.py  log_softmax_test.py  max_pool2d_test.py  mse_loss_test.py  nll_loss_test.py  optim_test.py  relu_test.py  sequential_test.py  softmax_test.py
