[project]
name = "mininn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Madiyar Aitbayev", email = "maitbayev@snapchat.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[tool.ruff.lint]
extend-select = [
    "I",
    "RUF",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

